--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,25 @@
-.fancynav{
-  background-color: #5e0730;
+ul {
+  text-align: center;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  width: 200px;
+  background-color: white;
+  position: fixed;
 }
-.carousel {
-  width:700px;
-  height:640px;
+li a {
+  display: block;
+  color: #5e0730;
+  padding: 16px 16px;
+  text-decoration: none;
+}
+/* Change the link color on hover */
+li a:hover {
+  text-decoration: none;
+  background-color: #5e0730;
+  color: white;
+}
+.active-link {
+  background-color: #5e0730;
+  color: white;
 }
