--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,11 @@
-ul {
+nav ul {
   text-align: center;
   list-style-type: none;
   margin: 0;
   padding: 0;
   width: 200px;
   background-color: white;
-  position: fixed;
-}
+} 
 li a {
   display: block;
   background-color: white;
@@ -14,7 +13,7 @@ li a {
   padding: 16px 16px;
   text-decoration: none;
 }
-li a:hover, a.active-link {
+.active-link, li a:hover {
   color: white;
   text-decoration: none;
   background: #5e0730;
