--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,13 @@
-body {
-  background: "blue.jpg";
+.navbar {
+  background-color: rgba(0, 0, 0, 0);
 }
+.nav-link {
+  color: white !important;
+}
+.navbar-brand {
+  color: white !important;
+}
+.navbar-toggler {
+  background-color: white !important;
+}
+
